# py3status-ups-battery-status

./: PKGBUILD  README.md  battery_status.py  pyproject.toml
src/: py3status_ups_battery_status.py
src/py3status_ups_battery_status/: ups_battery_status.py
