[tool.poetry]
name = "py3status-ups-battery-status"
version = "0.1.0"
description = "py3status widget to show the status of a UPS battery"
authors = ["mcgillij <mcgillivray.jason@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mcgillij/py3status-ups-battery-status"
repository = "https://github.com/mcgillij/py3status-ups-battery-status"
documentation = "https://github.com/mcgillij/py3status-ups-battery-status"
keywords = ["battery", "ups", "status", "i3", "py3status"]
include = [ "LICENSE", ]

[tool.poetry.scripts]
py3status_ups_battery_status = "py3status_ups_battery_status:run"

[tool.poetry.plugins."py3status"]
module = "py3status_ups_battery_status"

[tool.poetry.dependencies]
python = "^3.9"
py3status = "^3.34"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.7.2"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
