[tool.poetry]
name = "py3status-ups-battery-status"
version = "0.1.3"
description = "py3status module to show the status of a UPS battery"
authors = ["mcgillij <mcgillivray.jason@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mcgillij/py3status-ups-battery-status"
repository = "https://github.com/mcgillij/py3status-ups-battery-status"
documentation = "https://github.com/mcgillij/py3status-ups-battery-status"
keywords = ["battery", "ups", "status", "i3", "py3status"]
include = [ "LICENSE", ]

classifiers = [
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Topic :: Desktop Environment :: Window Managers",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Power (UPS)"
]

[tool.poetry.plugins."py3status"]
module = "py3status_ups_battery_status.ups_battery_status"

[tool.poetry.dependencies]
python = "^3.9 || ^3.10"
py3status = "^3.34"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.7.2"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
